# deblend_sofia_detections

./: pyproject.toml  version.py
deblend_sofia_detections/catalogue/: download.py  search.py
deblend_sofia_detections/config/: config.py  functions.py
deblend_sofia_detections/deblending/: deblending.py  image_manipulation.py  sofia_functions.py
deblend_sofia_detections/support/: errors.py  support_functions.py  system_functions.py  table_functions.py
docs/source/: Advanced.rst  conf.py  index.rst
package_name/: main.py
package_name/config/: config.py
