[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deblend_sofia_detections"
dynamic = ["version"]
description = "Development Status :: 4 - Beta"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    { name = "P. Kamphuis", email = "peterkamphuisastronomy@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "future-fstrings",
    "psutil",
    "omegaconf",
    'importlib_resources>=3.3.0',
    'importlib_metadata',
    'scipy',
    'astropy>=7.1.0',
    'astroquery',
    'make_moments>=1.0.8',
    'photutils',
    'scikit-image',
]

[project.urls]
Homepage = "https://github.com/PeterKamphuis/package_name"

[project.scripts]
deblend = "deblend_sofia_detections.main:main"

#!/usr/bin/env python



